tests/baselines/reference/modifiersInObjectLiterals.errors.txt
modifiersInObjectLiterals.ts(2,2): error TS1042: 'public' modifier cannot be used here.
modifiersInObjectLiterals.ts(3,2): error TS1042: 'private' modifier cannot be used here.
modifiersInObjectLiterals.ts(4,2): error TS1042: 'protected' modifier cannot be used here.
modifiersInObjectLiterals.ts(5,2): error TS1042: 'abstract' modifier cannot be used here.


==== modifiersInObjectLiterals.ts (4 errors) ====
    let data = {
    	public foo: 'hey',
    	~~~~~~
!!! error TS1042: 'public' modifier cannot be used here.
    	private bar: 'nay',
    	~~~~~~~
!!! error TS1042: 'private' modifier cannot be used here.
    	protected baz: 'oh my',
    	~~~~~~~~~
!!! error TS1042: 'protected' modifier cannot be used here.
    	abstract noWay: 'yes'	
    	~~~~~~~~
!!! error TS1042: 'abstract' modifier cannot be used here.
    };
    
    data.foo + data.bar + data.baz + data.noWay
    